--- a/cv.html
+++ b/cv.html
@@ -110,21 +110,27 @@ May 30, 2022
                     <div class="skills-contents">
                         <div class="skills-left">
                             <p class="skills-name">* English & German</p>
+                            <br></br>
                         </div>
                         <div class="skills-right">
                             <p class="skills-name">* Coding</p>
+                            <br></br>
                         </div>
                         <div class="skills-left">
                             <p class="skills-name">* Project Management</p>
+                            <br></br>
                         </div>
                         <div class="skills-right">
                             <p class="skills-name">* Problem solving</p>
+                            <br></br>
                         </div>
                         <div class="skills-left">
                             <p class="skills-name">* Research Skills</p>
+                            <br></br>
                         </div>
                         <div class="skills-right">
                             <p class="skills-name">* Time management</p>
+                            <br></br>
                         </div>
                     </div>
 
@@ -138,4 +144,4 @@ May 30, 2022
 
 </body>
 
-</html
+</html>
