--- a/cv assignment/cv.html
+++ b/cv assignment/cv.html
@@ -26,7 +26,7 @@ May 30, 2022
             
             <div class="left-section-contents">
                 <div class="profile">
-                    <img class="profile-image" src="photo.png" alt="Profile Image">
+                    <img class="profile-image" src="cvphoto.png" alt="Profile Image">
                     <br></br>
                     <p class="name">Stamatia Markella Printzou</p>
                     <p class="profession">IT Student</p>
