--- a/cv assignment/cv.html
+++ b/cv assignment/cv.html
@@ -29,7 +29,7 @@ May 30, 2022
                     <img class="profile-image" src="cvphoto.png" alt="Profile Image">
                     <br></br>
                     <p class="name">Stamatia Markella Printzou</p>
-                    <p class="profession">IT Student</p>
+                    <p class="profession"><i>College Student</i></p>
                     <br></br>
                 </div>
                 
@@ -56,11 +56,10 @@ May 30, 2022
                 <section class="about gap">
                     <div class="right-title">About Me</div>
                     <p class="about-me-contents">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta quae aliquid ab tempore deleniti modi animi facere, 
-                        laborum illum quis in quidem distinctio quod officia unde. Aspernatur eligendi architecto ipsam sint alias consequatur 
-                        at modi magni in, accusantium iure voluptates eius possimus? Incidunt veritatis illum corrupti nobis labore expedita.<br>
-                        <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus temporibus velit minima assumenda atque inventore natus hic, 
-                        voluptatem est explicabo voluptate vel, adipisci illum, ratione repellendus! Consequuntur veniam modi nihil.
+                        Hello, my name is Matina Prinjou. I was born and raised in Athens, Greece. I am an undergraduate student at Deree, The American College of Greece. 
+                        I am majoring in Information Technology with emphasis in Software Engineering, while I am also studying for a minor degree in Psychology. <br>
+                        In addition to my college studies, I have also studied and have certificates in Dancing, Piano Practice, Theory of Music, and in English and German languages. <br>
+                        Apart from my studies related interests, my interests also include reading and anything art related. 
                     </p>
                 </section>
 
@@ -96,7 +95,7 @@ May 30, 2022
                             <p class="education-time-period">2020</p>
                         </div>
                         <div class="education-right">
-                            <p class="education-subject">Outbound Study Abroad Programm</p>
+                            <p class="education-subject">Outbound Study Abroad Program</p>
                             <p class="education-desc">
                                 OSAP for Spring Semester 2020 at Wagner College, New York City. 
                             </p>
