--- a/cv assignment/cv.html
+++ b/cv assignment/cv.html
@@ -73,7 +73,7 @@ May 30, 2022
                         <div class="education-right">
                             <p class="education-subject">Information Technology</p>
                             <p class="education-desc">
-                                Major degree in Information Technology with emphasis in Software Emgineering. 
+                                Major degree in Information Technology with emphasis in Software Engineering. 
                             </p>
                         </div>
                     </div>
